@@ -138,7 +138,6 @@ extern boolean cArgIsOption (cookedArgs* const current);
 extern const char* cArgItem (cookedArgs* const current);
 extern void cArgForth (cookedArgs* const current);
 
-extern const char *fileExtension (const char *const fileName);
 extern boolean isIncludeFile (const char *const fileName);
 extern boolean isIgnoreToken (const char *const name, boolean *const pIgnoreParens, const char **const replacement);
 extern void parseOption (cookedArgs* const cargs);
